Fix src overflow

--- a/tags/styles/url.module.scss
+++ b/tags/styles/url.module.scss
@@ -76,6 +76,10 @@
         font-style: italic;
         font-weight: 400;
         color: #888;
+        white-space: nowrap;
+
+        width: 92%;
+        overflow: hidden;
     }
 }
 
